# RoboMind-S3

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CODEWHALE.md  CODEX.md  GUARDRAILS.md  HERMES.md  README.md  REASONIX.md  build_flash.cmd  partitions.csv  sdkconfig.defaults  sdkconfig.old
.github/workflows/: pr-checks.yml
.planning/: schema.md  tasks.json
docs/: board_arrival_checklist.md  hardware_spec.md  rust_adoption_plan.md  version_roadmap.md
docs/reference/: README.md
docs/reviews/: concurrency-audit.md  cross-validation-report.md  error-path-audit.md  header-include-audit.md  kconfig-gpio-audit.md  lifecycle-audit.md  v0.0.3-review.md  v0.0.4-review.md
main/: CMakeLists.txt  Kconfig.projbuild  audio_io.cpp  audio_io.h  camera_driver.cpp  camera_driver.h  chat_engine.cpp  chat_engine.h  chat_ui.cpp  chat_ui.h  display_driver.cpp  display_driver.h  idf_component.yml  main.cpp  sd_card.cpp  sd_card.h  system_monitor.cpp  system_monitor.h  wifi_manager.cpp  wifi_manager.h
prompts/: codex-camera-sd-skeleton.md  v0.0.4-codex-fix.md  v0.0.5-codex-autonomous.md  v0.0.6-codewhale-wifi-chat-fixes.md  v0.0.6-codex-critical-fix.md  v0.0.6-codex-display-fixes.md  v0.0.6-reasonix-ui-main-fixes.md
tools/: validate_cx9_display.py
